# pdf-compressor

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile
.vim/: coc-settings.json
cli/: Cargo.toml  main.rs
cli/src/: main.rs
docs/: index.html  style.css
lib/: Cargo.toml  lib.rs
ui/: package-lock.json  package.json
ui/src/: App.svelte  main.ts
ui/src/lib/: Counter.svelte
wasm/: Cargo.toml
wasm/src/: helper.rs  main.rs
www/: index.html
