[package]
name = "pdf-compressor"
version = "0.1.1"
edition = "2021"

[dependencies]
flate2 = "1.0.24"
image = "0.24.4"
jpeg-encoder = "0.5.1"
lopdf = "0.27.0"
progress_bar = { git = "https://github.com/brainwo/cli_progress_bar", branch = "action-mode" }

[lib]
name = "pdf_compressor"
path = "./lib.rs"
