[package]
name = "pdf-compressor-lib"
version = "0.1.1"
edition = "2021"

[dependencies]
flate2 = "1.0.24"
image = "0.24.4"
jpeg-encoder = "0.5.1"
lopdf = "0.27.0"
progress_bar = { git = "https://github.com/brainwo/cli_progress_bar", branch = "action-mode" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.83"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.13"

[lib]
name = "pdf_compressor_lib"
path = "./lib.rs"
crate-type = ["lib", "cdylib", "rlib"]
